--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,59 @@
-# Minimal dependencies for 8GB system optimization
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-
-# Lightweight embedding model
-sentence-transformers==2.2.2
-transformers==4.35.2
-
-# Vector store - CPU optimized
-faiss-cpu==1.7.4
-numpy==1.24.3
-
-# LLM inference via Ollama (lightweight client)
-ollama==0.1.7
-httpx==0.25.2
-
-# Text processing
-nltk==3.8.1
-
-# Optional for better JSON extraction
-pydantic-extra-types==2.1.0
-
-# Development
-pytest==7.4.3
+annotated-types==0.7.0
+anyio==3.7.1
 black==23.11.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
+diskcache==5.6.3
+exceptiongroup==1.3.0
+faiss-cpu==1.7.4
+fastapi==0.104.1
+filelock==3.19.1
+fsspec==2025.7.0
+h11==0.16.0
+hf-xet==1.1.8
+httpcore==1.0.9
+httpx==0.25.2
+huggingface-hub==0.34.4
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+joblib==1.5.1
+llama_cpp_python==0.3.16
+MarkupSafe==3.0.2
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.4
+ollama==0.1.7
+packaging==25.0
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.3.8
+pluggy==1.6.0
+pydantic==2.5.0
+pydantic-extra-types==2.1.0
+pydantic_core==2.14.1
+pytest==7.4.3
+PyYAML==6.0.2
+regex==2025.7.34
+requests==2.32.5
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==5.1.0
+sentencepiece==0.2.1
+sniffio==1.3.1
+starlette==0.27.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+tomli==2.2.1
+torch==2.2.2
+torchvision==0.17.2
+tqdm==4.67.1
+transformers==4.55.2
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.24.0
